<resources>
    <string name="app_name">Anime Wolf</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="change_language">change language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="save_changed">Save Changed</string>
    <string name="you_watches_episode">You watches Episode:</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="signout">SignOut</string>
    <string name="darkmode">DarkMode</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="forget_password">forget password</string>
    <string name="don_t_have_account">don\'t have account</string>
    <string name="signup">Signup</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="pass_mismatch">Password mismatch</string>
    <string name="fields_must_be_filled">fields must be filled</string>
    <string name="pass_more_than_8">Password must be more than 8 numbers</string>
    <string name="wrong_email">Email is wrong</string>
    <string name="all_anime">All Anime</string>
    <string name="trending_anime">Trending Anime</string>
    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="rememberme">RememberMe</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send">SEND</string>
</resources>