<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background"
    tools:context=".ui.SettingsFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Anime Wolf"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="63dp"
        android:background="@drawable/frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">


        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="475dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switchDarkMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/darkmode"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/tvChangeLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/change_language"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_language_24"
                android:drawableTint="@color/teal_700"/>

            <Button
                android:id="@+id/SignOut"
                android:layout_width="263dp"
                android:layout_height="46dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:background="@drawable/bgbtn"
                android:text="@string/signout"
                android:textColor="@color/white" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent" />


        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>