<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUpViewModel"
            type="com.example.animeapp.ui.signup.SignUpViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".SignUpFragment">

            <ImageView
                android:id="@+id/signup_image"
                android:layout_width="411dp"
                android:layout_height="202dp"
                android:background="@drawable/login_background"
                android:scaleType="centerCrop"
                app:layout_goneMarginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="@+id/signup_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />





            <EditText
                android:id="@+id/signup_email"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_custom"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:text="@={signUpViewModel.email}"
                android:inputType="text"
                android:layout_marginTop="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/signup_image"
                app:layout_constraintBottom_toTopOf="@+id/signup_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/signup_pass"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_custom"
                android:hint="@string/password"
                android:text="@={signUpViewModel.pass}"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/signup_confirmPass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/signup_confirmPass"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:background="@drawable/edit_text_custom"
                android:hint="@string/confirm_password"
                android:text="@={signUpViewModel.confirm}"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent=".8" />

            <CheckBox
                android:id="@+id/cbRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:text="@string/rememberme"
                app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_confirmPass"
                app:layout_constraintVertical_bias="0.104" />


            <Button
                android:id="@+id/btnSignUp"
                android:onClick="@{()->signUpViewModel.authentication()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bgbtn"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.79"
                app:layout_constraintWidth_percent=".8" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/already_have_an_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

            <TextView
                android:id="@+id/signup_tvSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:text="@string/sign_in"
                android:onClick="@{()-> signUpViewModel.goToSignIn()}"
                android:textColor="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>