<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="signInVm"
            type="com.example.animeapp.ui.signin.SignInViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".SignInFragment">

            <ImageView
                android:id="@+id/signin_imageView"
                android:layout_width="411dp"
                android:layout_height="202dp"
                android:background="@drawable/login_background"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="50sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/signin_imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_imageView" />

            <EditText
                android:id="@+id/signin_etUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_custom"
                android:hint="@string/email"
                android:inputType="text"
                android:text="@={signInVm.email}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_imageView"
                app:layout_constraintVertical_bias="0.183"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/signin_etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_custom"
                android:hint="@string/password"
                android:text="@={signInVm.pass}"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_etUsername"
                app:layout_constraintVertical_bias="0.113"
                app:layout_constraintWidth_percent=".8" />

            <Button
                android:id="@+id/signin_btnSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bgbtn"
                android:text="@string/sign_in"
                android:onClick="@{()->signInVm.signIn()}"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.711"
                app:layout_constraintWidth_percent=".8" />

            <TextView
                android:id="@+id/signin_tvForgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:clickable="true"
                android:text="@string/forget_password"
                android:textColor="#2196F3"
                app:layout_constraintBottom_toTopOf="@+id/signin_btnSignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_etPassword"
                app:layout_constraintVertical_bias="0.104" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/don_t_have_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_btnSignIn" />

            <TextView
                android:id="@+id/signin_tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:onClick="@{()->signInVm.goToSignUp()}"
                android:text="@string/signup"
                android:textColor="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/signin_btnSignIn" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>